--- a/app/src/main/res/layout/fragment_calendar_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_dialog.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="kr.ryan.alarm.viewmodel.AlarmDateSelectViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -10,16 +16,17 @@
             android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            CalendarDateClick="@{viewModel.calendarDateClick}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_add"/>
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:text="@string/add"
+            android:text="@string/cancel"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold"
@@ -30,12 +37,12 @@
             app:layout_constraintWidth_percent="0.45" />
 
         <Button
-            android:id="@+id/btn_cancel"
+            android:id="@+id/btn_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:text="@string/cancel"
+            android:text="@string/add"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold"
