--- a/app/src/main/res/layout/recycler_multi_day.xml
+++ b/app/src/main/res/layout/recycler_multi_day.xml
@@ -18,15 +18,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_alarm_date" />
+                app:layout_constraintWidth_percent="0.4"/>
 
-            <TextView
-                android:id="@+id/tv_alarm_date"
-                android:layout_width="wrap_content"
+            <include
+                android:id="@+id/include_days"
+                layout="@layout/include_alarm_add_days"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="25dp"
-                android:textStyle="bold"
+                app:layout_constraintWidth_percent="0.45"
                 app:layout_constraintRight_toLeftOf="@id/switch_alarm" />
 
             <androidx.appcompat.widget.SwitchCompat
