--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.text.TextUtils"/>
+        
         <variable
             name="fragment"
             type="kr.ryan.alarm.ui.dialog.AlarmRegisterDialogFragment" />
@@ -57,6 +59,7 @@
                     android:gravity="center_vertical"
                     android:textSize="16dp"
                     android:textStyle="bold"
+                    android:text="@{TextUtils.isEmpty(viewModel.showSelectDay) ? viewModel.showSelectedDate : viewModel.showSelectDay}"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/iv_calendar"
