--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -71,6 +71,7 @@
                     android:layout_height="0dp"
                     android:contentDescription="@string/calendar"
                     android:src="@drawable/calendar"
+                    android:onClick="@{() -> viewModel.onClickCalendarEvent()}"
                     app:layout_constraintDimensionRatio="1"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintRight_toRightOf="parent"
