--- a/refc/app/src/main/res/layout/activity_main.xml
+++ b/refc/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
             android:id="@+id/tv_remain_time"
             android:layout_width="match_parent"
@@ -21,8 +28,8 @@
             android:maxLines="1"
             android:textSize="25sp"
             android:textStyle="bold"
-            app:layout_constraintHeight_percent="0.25"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintTop_toBottomOf="@id/main_toolbar"/>
 
         <ImageView
             android:id="@+id/iv_add"
@@ -30,7 +37,7 @@
             android:layout_height="0dp"
             android:src="@drawable/ic_add"
             android:onClick="@{() -> viewModel.activeAddBtn()}"
-            app:layout_constraintWidth_percent="0.15"
+            app:layout_constraintHeight_percent="0.1"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintRight_toLeftOf="@id/iv_more"
             app:layout_constraintTop_toBottomOf="@id/tv_remain_time"
@@ -43,7 +50,7 @@
             android:layout_height="0dp"
             android:src="@drawable/ic_more_vert"
             android:onClick="@{() -> viewModel.activeMoreBtn()}"
-            app:layout_constraintWidth_percent="0.15"
+            app:layout_constraintHeight_percent="0.1"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_remain_time"
@@ -58,8 +65,8 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.6" />
+            app:layout_constraintTop_toBottomOf="@id/iv_more"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
