--- a/refc/app/src/main/res/values/colors.xml
+++ b/refc/app/src/main/res/values/colors.xml
@@ -6,6 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="gray_400">#BDBDBD</color>
+
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="cyan_200">#FF80DEEA</color>
+    <color name="cyan_500">#FF00BCD4</color>
+    <color name="cyan_700">#FF0097A7</color>
+    <color name="orange_200">#FFFFCC80</color>
+    <color name="orange_700">#FFF57C00</color>
+    
 </resources>
