--- a/refc/app/src/main/res/layout/activity_main.xml
+++ b/refc/app/src/main/res/layout/activity_main.xml
@@ -18,44 +18,49 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_remain_time"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/cyan_200"
             android:gravity="center"
             android:maxLines="1"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintTop_toBottomOf="@id/main_toolbar"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+            app:layout_constraintWidth_percent="0.9" />
 
         <ImageView
             android:id="@+id/iv_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/ic_add"
+            android:contentDescription="@string/add"
             android:onClick="@{() -> viewModel.activeAddBtn()}"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintDimensionRatio="1"
-            app:layout_constraintRight_toLeftOf="@id/iv_more"
-            app:layout_constraintTop_toBottomOf="@id/tv_remain_time"
+            android:src="@drawable/ic_add"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
-            android:contentDescription="@string/add"/>
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintRight_toLeftOf="@id/iv_more"
+            app:layout_constraintTop_toBottomOf="@id/tv_remain_time" />
 
         <ImageView
             android:id="@+id/iv_more"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/ic_more_vert"
+            android:contentDescription="@string/more"
             android:onClick="@{() -> viewModel.activeMoreBtn()}"
-            app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintDimensionRatio="1"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_remain_time"
+            android:src="@drawable/ic_more_vert"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
-            android:contentDescription="@string/more"/>
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_remain_time" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_alarm"
@@ -65,8 +70,8 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/iv_more"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_more" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
