--- a/refc/app/src/main/res/layout/dialog_alarm.xml
+++ b/refc/app/src/main/res/layout/dialog_alarm.xml
@@ -12,22 +12,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <CalendarView
-            android:id="@+id/calendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TimePicker
+            android:id="@+id/time_pick"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:timePickerMode="spinner"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHeight_percent="0.4"
             />
 
-        <TextView
-            android:id="@+id/tv_selected_date"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="테스트 중입니다."
-            app:layout_constraintTop_toBottomOf="@id/calendar"/>
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintBottom_toTopOf="@id/btn_cancel">
+
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/cancel"
+            android:background="@color/cyan_200"
+            app:backgroundTint="@null"
+            android:onClick="@{() -> viewModel.onClickCancelEvent()}"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:text="@string/save"
+            android:gravity="center"
+            android:background="@color/cyan_200"
+            app:backgroundTint="@null"
+            android:onClick="@{() -> viewModel.onClickSaveEvent()}"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
 
 
 
